--- a/index.css
+++ b/index.css
@@ -52,3 +52,24 @@
 .filter-btn {
     margin: 10px;
 }
+
+.shimmer-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card {
+    margin: 10px;
+    width: 200px;
+    height: 400px;
+    background-color: #f0f0f0;
+}
+
+.login {
+    padding: 0px 20px;
+    cursor: pointer;
+}
+
+.filter-container {
+    display: flex;
+}
