Created class based comp of user for AboutUs

--- a/index.css
+++ b/index.css
@@ -73,3 +73,13 @@
 .filter-container {
     display: flex;
 }
+
+.link {
+    text-decoration: none; 
+    color: black; 
+  }
+
+.user-class {
+    border: 2px solid black;
+    padding: 5px 20px;
+}
